--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nihonme",
+  "name": "$VITE_APP_TITLE",
   "private": true,
   "version": "0.1.2",
   "type": "module",
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist -b main -r https://github.com/rifkydelta/nihonme.git"
+    "deploy": "gh-pages -d $VITE_DEPLOY_DIST_DIR -b $VITE_DEPLOY_BRANCH -r $VITE_DEPLOY_REPO_URL",
+    "deploy:vercel": "vercel --prod",
+    "deploy:netlify": "netlify deploy --prod"
   },
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.3",
@@ -30,9 +32,11 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "gh-pages": "^6.3.0",
+    "netlify-cli": "^17.19.0",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
+    "vercel": "^33.5.1",
     "vite": "^5.0.8"
   }
 }
