--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "$VITE_APP_TITLE",
+  "name": "nihonme-app",
   "private": true,
-  "version": "0.1.2",
+  "version": "0.1.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
