--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d $VITE_DEPLOY_DIST_DIR -b $VITE_DEPLOY_BRANCH -r $VITE_DEPLOY_REPO_URL",
+    // ganti dengan repository milik kalian
+    "deploy": "gh-pages -d dist -b main -r https://github.com/rifkydelta/nihonme.git",
     "deploy:vercel": "vercel --prod",
     "deploy:netlify": "netlify deploy --prod"
   },
