Increment version to 0.1.4 in package.json; add react-joyride for guided tours, including custom styles and onboarding steps in AIDetectionPage. Update component IDs for better accessibility and interaction tracking.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nihonme-app",
   "private": true,
-  "version": "0.1.3",
+  "version": "0.1.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,11 +19,13 @@
     "lucide-react": "^0.330.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.8.2",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-joyride": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
